--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,36 @@ body {
     background-image: url('../images/Stage.jpg');
 }
 
+.canvas-ballerina {
+    border-image: round;
+    width: 350px;
+    position: relative;
+}
+
+.nav-bar {
+        background-color:snow;
+        padding-top: 14px;
+        padding-bottom: 14px
+}
+
+.nav-bar a {
+    color: gray;
+    text-decoration: none;
+    font-size: 27px;
+}
+
+.nav-bar-ul {
+    display: flex;
+    justify-content: space-evenly;
+    width: 700px;
+    margin: 0 auto
+}
+  
+.nav-bar-ul-li {
+    list-style-type: none;
+    text-align: center
+}
+
 #question {
     font-family: 'Courier New', Courier, monospace;
     font-style: normal;
@@ -21,14 +51,29 @@ body {
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 64px;
+    font-size: 72px;
     font-style: normal;
+    text-shadow: whitesmoke 10px -4px 4px;
     font-weight: 350;
     text-align: center;
+    text-size-adjust: inherit;
 }
 
 h2 {
-    text-shadow: darkgray 8px -3px 2px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    text-shadow: gray 10px -3px 5px;
+    text-align: center;
+    background-color:lavenderblush;
+    background-size: contain;
+    background-position: 0cm;
+    line-height: 1cm;
+}
+
+h3 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-size: 45px;
 }
 
 ul {
