--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,12 @@ body {
 
 .canvas-ballerina {
     border-image: round;
-    width: 350px;
+    max-width: 350px;
+    min-height: 350px;
     position: relative;
+    border: 2px;
+    border-color: antiquewhite;
+    padding-top: 30px;
 }
 
 .nav-bar {
@@ -61,19 +65,24 @@ h1 {
 
 h2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     text-shadow: gray 10px -3px 5px;
     text-align: center;
+    letter-spacing: 1;
+    border-radius: 20px;
     background-color:lavenderblush;
+    opacity: 60%;
     background-size: contain;
     background-position: 0cm;
     line-height: 1cm;
+    padding: 30px 15px;
 }
 
 h3 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-    font-size: 45px;
+    text-align: right;
+    font-size: 30px;
+    font-weight: lighter;
 }
 
 ul {
@@ -81,18 +90,31 @@ ul {
     text-align: left;
 }
 
-start-btn {
-    background-color: gray;
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 2em;
-    letter-spacing: 0.5px;
+.start-btn {
     text-align: center;
+    position: absolute;
+    left: 40%;
+    background-color: gray;
+    border-radius: 12px;
+    color: lavenderblush;
     text-decoration: none;
-    padding-top: 10px;
-    padding-right: 30px;
-    padding-bottom: 10px;
-    padding-left: 30px
+    font-weight: lighter;
+    min-height: 40px;
+    min-width: 180px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 2.2em;
+    letter-spacing: 0.5px;
+    margin-top: 36px;
+    padding-top: 25px;
+    padding-right: 10px;
+    padding-bottom: 25px;
+    padding-left: 45px
+    border-color: white;
+  }
+
+  .start-btn:hover {
+    background-color: black;
+    transition: 0.6s;
   }
 
 .not-visible {
