--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,60 @@ body {
     text-align: center
 }
 
+.start-btn {
+    text-decoration: none;
+    color: lavenderblush;
+    text-align: center;
+    position: absolute;
+    left: 40%;
+    background-color: gray;
+    border-radius: 12px;
+    font-weight: lighter;
+    min-height: 40px;
+    min-width: 180px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 2.2em;
+    letter-spacing: 0.5px;
+    margin-top: 36px;
+    padding-top: 25px;
+    padding-right: 10px;
+    padding-bottom: 25px;
+    padding-left: 10px
+  }
+
+  .start-btn:hover {
+    text-decoration: none;
+    background-color: black;
+    transition: 0.6s;
+  }
+
+  .start-btn-2 {
+    text-decoration: none;
+    color: lavenderblush;
+    text-align: center;
+    position: absolute;
+    left: 60%;
+    background-color: gray;
+    border-radius: 12px;
+    font-weight: lighter;
+    min-height: 10px;
+    min-width: 60px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    letter-spacing: 0.5px;
+    margin-top: 12px;
+    padding-top: 10px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px
+  }
+
+  .start-btn-2:hover {
+    text-decoration: none;
+    background-color: black;
+    transition: 0.6s;
+  }
+
 #question {
     font-family: 'Courier New', Courier, monospace;
     font-style: normal;
@@ -88,33 +142,6 @@ ul {
     list-style: lower-latin;
     text-align: left;
 }
-
-.start-btn {
-    text-align: center;
-    position: absolute;
-    left: 40%;
-    background-color: gray;
-    border-radius: 12px;
-    color: lavenderblush;
-    text-decoration: none;
-    font-weight: lighter;
-    min-height: 40px;
-    min-width: 180px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 2.2em;
-    letter-spacing: 0.5px;
-    margin-top: 36px;
-    padding-top: 25px;
-    padding-right: 10px;
-    padding-bottom: 25px;
-    padding-left: 45px
-    border-color: white;
-  }
-
-  .start-btn:hover {
-    background-color: black;
-    transition: 0.6s;
-  }
 
 .not-visible {
     visibility: hidden;
